start with slider

--- a/css/style.css
+++ b/css/style.css
@@ -115,10 +115,9 @@ body {
     color: #828284;
 }
 
-
-/* .main-nav {
+.main-nav {
     display: none;
-} */
+}
 
 .container-tell,
 .container-menu .cointaner-tittle {
