--- a/css/style.css
+++ b/css/style.css
@@ -146,8 +146,9 @@ body {
 .slider {
     display: flex;
     width: 600%;
-    height: 220px;
-    background: red;
+    min-height: 220px;
+    max-height: 400px;
+    background: #000000;
     margin-left: -100%;
 }
 
@@ -160,6 +161,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    opacity: .7;
 }
 
 .slider-overflow .title-banner {
@@ -227,4 +229,66 @@ body {
 .btn-rigth {
     background-image: url('../icons/arrowright.png');
     right: 0;
+}
+
+.section-glasses-title {
+    margin-top: 18px;
+    padding: 12px;
+    font-size: 1.4em;
+    font-weight: 500;
+    text-align: center;
+}
+
+
+/*SECTION GLASSES*/
+
+.container-products {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+    gap: 28px;
+    justify-content: center;
+    padding: 40px;
+}
+
+.product {
+    /* width: 290px;
+    height: 380px; */
+    padding: 16px;
+    border: 1px solid #ded0d0;
+    /* margin: 0 auto; */
+}
+
+.container-picture-glass {
+    height: 70%;
+}
+
+.container-picture-glass img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.item-glass-info {
+    height: 30%;
+    text-align: center;
+}
+
+.glass-about .glass-name {
+    font-size: 1.2em;
+    color: #959596;
+    margin-bottom: 8px;
+}
+
+.glass-about .glass-price {
+    font-size: 1.1em;
+    color: #ff4e00;
+    font-weight: bold;
+    letter-spacing: 1px;
+    margin-bottom: 14px;
+}
+
+.cart-container .icon-cart {
+    font-size: 22px;
+    color: #1a944c;
 }
