--- a/css/mobile.css
+++ b/css/mobile.css
@@ -219,6 +219,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     top: calc(50% - 24px);
+    cursor: pointer;
 }
 
 .btn-left {
@@ -245,7 +246,8 @@ body {
 .container-products {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+    /* grid-template-columns: repeat(auto-fill, minmax(260px, 280px)); */
+    grid-template-columns: 1fr;
     gap: 28px;
     justify-content: center;
     padding: 40px;
@@ -254,9 +256,36 @@ body {
 .product {
     /* width: 290px;
     height: 380px; */
+    position: relative;
     padding: 16px;
     border: 1px solid #ded0d0;
-    /* margin: 0 auto; */
+    border-radius: 6px;
+    box-shadow: 0px 1px 12px 0px #d1d1d1;
+}
+
+.product .new-product {
+    display: block;
+    width: 70px;
+    padding: 8px;
+    position: absolute;
+    top: 10px;
+    text-align: center;
+    /* font-weight: bold; */
+    letter-spacing: 2px;
+    color: #fff;
+    right: 20px;
+    /* -webkit-transform: rotate( 
+-90deg
+); */
+    transform: rotate( -90deg);
+}
+
+.new-product.product-sun {
+    background: #ff004e;
+}
+
+.new-product.product-winter {
+    background: #471c96;
 }
 
 .container-picture-glass {
